--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <form id="situsjudi" class="hidden">
           <div class="form-group form-group-lg">
             <button type="submit" id="situs1" class="btn warnakuda btn-lg btn-block"
-              onclick="window.open('https://tinyurl.com/seodream', 'situs1','width=800, height=600, status=1,scrollbar=yes');return true;"><b>DAFTAR</b></button>
+              onclick="window.open('https://bingurl.org/ceritajudi', 'situs1','width=800, height=600, status=1,scrollbar=yes');return true;"><b>DAFTAR</b></button>
             <p class="help-block text-center">Jika Sudah Mendaftar, Silakan Klik Tombol Inject Sekarang!</p>
             <div class="form-group form-group-lg" style="display:none;">
               <form id="peringatan text-center">
